# duckdb_webbed

./: .fledgling-cli  .fledgling-help.md  .fledgling-init.sql  .gitignore  .gitmodules  .readthedocs.yaml  API_CONSISTENCY_PLAN.md  CLAUDE.md  CMakeLists.txt  DEPTH_ANALYSIS.md  DOCS_REVIEW_REPORT.md  DUCK_BLOCK_TABLE_IMPLEMENTATION.md  FEATURE_PARITY_ANALYSIS.md  Makefile  README.md  RELEASE_NOTES_v1.3.0.md  RELEASE_NOTES_v1.4.0.md  RELEASE_NOTES_v2.1.0.md  RELEASE_NOTES_v2.1.1.md  RELEASE_NOTES_v2.2.0.md  RELEASE_NOTES_v2.2.1.md  RELEASE_NOTES_v2.3.0.md  RELEASE_NOTES_v2.4.0.md  RELEASE_NOTES_v2.5.0.md  RELEASE_NOTES_v2.6.0.md  SCHEMA_INFERENCE_PLAN.md  TEST_STATUS.md  TODO.md  XML_EXTENSION_DESIGN.md  devenv.nix  devenv.yaml  employees.xml  extension_config.cmake  invalid.xml  make.out  review.json  test.json  test.out  test.xml  test_comprehensive.sql  (+6 more)
.github/workflows/: MainDistributionPipeline.yml  pre-commit-checks.yml
.lq/: commands.toml  config.toml
docs/: changelog.rst  conf.py  contributing.rst  index.rst  installation.rst  namespaces.rst  parameters.rst  quickstart.rst  schema_inference.rst  xpath_guide.rst
docs/archive/: XML_EXTENSION_PROJECT_PLAN.md
docs/functions/: conversion.rst  file_reading.rst  html_extraction.rst  index.rst  utilities.rst  xml_extraction.rst
docs/superpowers/plans/: 2026-03-22-datetime-format.md  2026-05-08-preserve-whitespace.md
docs/superpowers/specs/: 2026-03-22-datetime-format-design.md  2026-05-08-preserve-whitespace-design.md
docs/tasks/: issue-17-phase2-sax-streaming.md  issue-38-date-format-parameter.md  issue-40-nullstr-parameter.md
src/: doc_block_functions.cpp  duck_block_functions.cpp  webbed_extension.cpp  xml_extension.cpp  xml_reader_functions.cpp  xml_sax_reader.cpp  xml_scalar_functions.cpp  xml_schema_inference.cpp  xml_types.cpp  xml_utils.cpp
src/include/: doc_block_functions.hpp  doc_block_types.hpp  duck_block_functions.hpp  duck_block_types.hpp  duckdb_compat.hpp  webbed_extension.hpp  xml_extension.hpp  xml_in_memory_reader.hpp  xml_reader_functions.hpp  xml_sax_reader.hpp  xml_scalar_functions.hpp  xml_schema_inference.hpp  xml_types.hpp  xml_utils.hpp
test/data/: complex_conflicts.xml  debug_nested.xml  debug_tier.xml  nested_company.xml  simple_nested.xml  simple_test.xml  test.jsonl  test_attributes.xml  test_deep_nested.xml  test_simple_list.xml  test_simple_struct_array.xml  test_single_employee.xml  test_typed_arrays.xml  test_xml_sample.xml
test/html/: all_varchar_data.html  all_varchar_test.html  complex.html  complex_types_test.html  cross_record_nested_attrs.html  custom_elements.html  custom_elements2.html  deep_nesting.html  force_list_test.html  github_issue_53_multi_match.html  github_issue_53_utf8.html  invalid_html.html  issue_33_cross_record.html  malformed.html  minimal_valid.html  nested_tables.html  simple.html  type_inference_test.html  unicode.html  union_file1.html  union_file2.html  void_elements.html  whitespace_content.html
test/html/schema_tests/: list_data.html  multiple_tables.html  people_table.html
test/html/struct_widen/: a1.html  a2.html
test/manual/: test_enhanced_to_xml.sql
test/sql/: adversarial_xml.test  concurrency_invalid_xml_race.test  cross_record_attributes.test  diag73_a_cdata_dom.test  diag73_b_eol_dom.test  diag73_c_cdata_sax.test  diag73_d_eol_sax.test  diag73_e_html.test  doc_block_html.test  duck_block_html.test  duck_block_robustness.test  empty_and_edge_cases.test  fragment_serialize_utf8.test  github_issue_13_rss_feeds.test  github_issue_17_large_file_streaming.test  github_issue_33_cross_record_repeated.test  github_issue_33_repeated_elements.test  github_issue_49_attr_type_inference.test  github_issue_4_aws_api.test  github_issue_4_namespace_extraction.test  github_issue_51_custom_html_elements.test  github_issue_53_html_extract_text.test  github_issue_54_documentation_mismatch.test  github_issue_55_xml_extract_attributes.test  github_issue_60_namespace_modes.test  github_issue_63_cdata_sections.test  github_issue_64_non_latin.test  github_issue_73_preserve_whitespace.test  github_issue_77_sax_edge_cases.test  github_issue_78_json_escaping.test  github_issue_7_thread_safety.test  github_issue_8_sitemap.test  html_all_varchar.test  html_basic.test  html_basic_functions.test  html_complex_types.test  html_entity_encoding.test  html_extraction.test  html_file_reading.test  html_force_list.test  (+67 more)
test/wasm/: README.md  check_wasm_symbols.py  load_test.cjs  load_test.mjs  package-lock.json  package.json  run_wasm_checks.sh
test/xml/: all_varchar_test.xml  attr_type_inference.xml  attributes_only.xml  cross_record_attrs.xml  cross_record_nested_attrs.xml  datetime_format_eu.xml  datetime_format_iso.xml  datetime_format_mixed.xml  datetime_format_test.html  datetime_format_test.xml  deep_hierarchy.xml  deep_single_path.xml  force_list_test.xml  generate_stress_test.py  github_issue_55_attributes.xml  github_issue_55_nested_attributes.xml  invalid.xml  issue_33_cross_record.xml  issue_33_multiple_employees.xml  issue_33_nested_repeated.xml  issue_33_repeated_skills.xml  large_catalog.xml  large_dataset.xml  large_row_count.xml  long_names.xml  mixed_empty_records.xml  non_latin.xml  nullstr_test.xml  rss_feed.xml  rss_real_feed.xml  sax_cr_parity.xml  sax_list_widen_varchar_big.xml  sax_list_widen_varchar_small.xml  sax_mixed_order.xml  sax_nested_child_attr_parity.xml  sax_ns_keep.xml  sax_ns_later_record.xml  sax_struct_text_parity.xml  sax_test_large.xml  sax_test_nullstr.xml  (+37 more)
test/xml/github_issues/: aws_ec2_volumes.xml  aws_ec2_volumes_no_ns.xml  aws_ec2_volumes_simple.xml  hackernews_rss.xml  sitemap_example.xml
test/xml/schema_inference/: attr_prefixed.xml  bigint_widening.xml  column_order.xml  inf_nan.xml  issue_102_in_sample_mixed.xml  issue_102_large_default.xml  issue_102_out_of_sample_cast.xml
test/xml/type_inference/: binary_values.xml  bool_mixed_case.xml  bool_strings.xml  dates.xml  employees.xml  extreme_int_one_double.xml  extreme_int_one_varchar.xml  id_numeric.xml  mixed_numeric.xml  mostly_int_one_double.xml  on_off.xml  (+2 more)
